force-app/main/default/objects/KB_Pipeline_Config__c/KB_Pipeline_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Pipeline configuration for the 5-tier deduplication pipeline. Mirrors KM_Pipeline_Config__mdt for DML-updatable wizard access.</description>
    <label>KB Pipeline Configuration</label>
</CustomObject>