force-app/main/default/objects/KB_Pipeline_Config__c/fields/Default_Execution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Default_Execution_Mode__c</fullName>
    <description>Default mode for the staircase pipeline.</description>
    <defaultValue>'DEDUPLICATION'</defaultValue>
    <label>Default Execution Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>