force-app/main/default/objects/KB_Pipeline_Config__c/fields/Manual_Review_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Threshold__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Confidence above which candidates need manual review</description>
    <label>Manual Review Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>