force-app/main/default/objects/KB_Pipeline_Config__c/fields/Max_Callout_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Callout_Limit__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Hard cap for prompt callouts in a single queueable execution.</description>
    <label>Max Callout Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>