force-app/main/default/objects/KB_Pipeline_Config__c/fields/Max_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Chunk_Size__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Maximum character size used for semantic chunking.</description>
    <label>Max Chunk Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>