force-app/main/default/objects/KB_Pipeline_Config__c/fields/Max_Finalists__c.field-meta.xml
<CustomField>
    <fullName>Max_Finalists__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum finalist candidates per article</description>
    <label>Max Finalists</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>