force-app/main/default/objects/KB_Pipeline_Config__c/fields/Max_SubAgent_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Max_SubAgent_Callouts__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Maximum sub-agent callouts per pipeline run</description>
    <label>Max SubAgent Callouts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>