force-app/main/default/objects/KB_Pipeline_Config__c/fields/Min_Clarity_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Clarity_Score__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Quality-gate threshold (0-100). Articles scoring below this on Clarity are excluded from the dedup pipeline. Set to 0 to disable the gate for this dimension.</description>
    <label>Min Clarity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>