force-app/main/default/objects/KB_Pipeline_Config__c/fields/Supported_Languages__c.field-meta.xml
<CustomField>
    <fullName>Supported_Languages__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Supported languages for pipeline</description>
    <label>Supported Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>