force-app/main/default/objects/KB_Pipeline_Config__c/fields/Tier2_Similarity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Tier2_Similarity_Threshold__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>Similarity threshold for Tier 2</description>
    <label>Tier 2 Similarity Threshold</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>