force-app/main/default/objects/KB_Pipeline_Config__c/fields/Tier2_TopK__c.field-meta.xml
<CustomField>
    <fullName>Tier2_TopK__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Top K results for Tier 2 vector search</description>
    <label>Tier 2 Top K</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>